programs/tests/invalid_Programs/type-checker/inconsistent_if_statement.kln
function main():integer
    if 1 = 0 then
        false
    else
        1
